tests/ui/parser/issues/issue-81827.stderr
error: mismatched closing delimiter: `]`
  --> $DIR/issue-81827.rs:7:23
   |
LL | fn r()->i{0|{#[cfg(r(0{]0
   |               -       ^^ mismatched closing delimiter
   |               |       |
   |               |       unclosed delimiter
   |               closing delimiter possibly meant for this

error: this file contains an unclosed delimiter
<<<<<<< HEAD
  --> $DIR/issue-81827.rs:13:14
=======
  --> $DIR/issue-81827.rs:7:27
>>>>>>> pull-upstream-temp--do-not-use-for-real-code
   |
LL | fn r()->i{0|{#[cfg(r(0{]0
   |          -  -          - missing open `[` for this delimiter
   |          |  |
   |          |  unclosed delimiter
   |          unclosed delimiter
...
LL | // Functions
   |             ^

error: aborting due to 2 previous errors

